<?xml version="1.0"?>
<package format="2">
  <name>odom_integrator</name>
  <version>0.0.0</version>
  <description>The odom_integrator package</description>

  <maintainer email="richard.kelley@gmail.com">Richard Kelley</maintainer>
  <license>BSD</license>
  <author email="richard.kelley@gmail.com">Richard Kelley</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gnss_driver</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>gnss_driver</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
